add file contact us

--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
     </div>
 </div>
 
+<p>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi laudantium quaerat autem expedita tempora, est consectetur at rem, illum sapiente sint eum, nemo reprehenderit. Commodi rem quaerat perferendis accusantium dolorum.
+</p>
 
 
 <button type="button" class="btn btn-primary">Primary</button>
