edit about & index

--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
 </p>
 
 
+<h2>
+    Loris
+</h2>
+
 <button type="button" class="btn btn-primary">Primary</button>
 <button type="button" class="btn btn-secondary">Secondary</button>
 <button type="button" class="btn btn-success">Success</button>
