edit index - about 2

--- a/about-us.html
+++ b/about-us.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse, beatae sunt! Voluptas, ex ipsam fugiat magnam in voluptate consequuntur odit nobis quibusdam eligendi. Corporis, commodi dignissimos! Quis voluptate impedit libero.
+    </p>
+
+    
     
 </body>
 </html>
